test/simple/correct/PMC11.hs
module PMC11 where

main :: Int
main = fib 6

fib :: Int -> Int
fib 0 = 0
fib 1 = 1
fib n = fib (n-1) + fib (n-2)
