test/simple/typeerrors/Heuristics/AppReorder2.hs
module AppReorder2 where

sumInts :: [Int] -> Int
sumInts = foldr 0 (+) 
